--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@
 
 VERSION_NAME=1.0.1
 VERSION_CODE=2
-GROUP=com.skyfishjy.ripplebackground
+GROUP=com.mandarin.ripplebackground
 
 POM_DESCRIPTION=Beautiful ripple animation
 POM_URL=https://github.com/skyfishjy/android-ripple-background
