--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.skyfishjy.library.ripplebackground.sample" >
+    package="com.mandarin.library.ripplebackground.sample" >
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -8,7 +8,7 @@
         android:theme="@android:style/Theme.Holo.Light"
         android:hardwareAccelerated="true">
         <activity
-            android:name="com.skyfishjy.ripplebackground.sample.MainActivity"
+            android:name="com.mandarin.ripplebackground.sample.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
